# python-crud-rest-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
pythoncrudrestapi/: __init__.py
