[tool.poetry]
name = "pythoncrudrestapi"
version = "0.1.0"
description = "Simple CRUD Rest API in python"
authors = ["Joakim Taule Kartveit <joakimkartveit@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pythoncrudrestapi = "pythoncrudrestapi:main"