[tool.poetry]
name = "pythoncrudrestapi"
version = "0.1.0"
description = "Simple CRUD Rest API in python"
authors = ["Joakim Taule Kartveit <joakimkartveit@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pythoncrudrestapi = "pythoncrudrestapi:app.run(host='0.0.0.0', port=8080)"